--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -135,7 +135,7 @@ cplay_5 : "ᴏɴʟʏ ᴄʜᴀɴɴᴇʟs ᴀʀᴇ sᴜᴘᴘᴏʀᴛᴇᴅ."
 cplay_6 : "» ʏᴏᴜ ɴᴇᴇᴅ ᴛᴏ ʙᴇ ᴛʜᴇ <b>ᴏᴡɴᴇʀ</b> ᴏғ ᴛʜᴇ ᴄʜᴀɴɴᴇʟ {0} ᴛᴏ ᴄᴏɴɴᴇᴄᴛ ɪᴛ ᴡɪᴛʜ ᴛʜɪs ɢʀᴏᴜᴘ.\n<b>ᴄʜᴀɴɴᴇʟ's ᴏᴡɴᴇʀ :</b> @{1}\n\nᴀʟᴛᴇʀɴᴀᴛɪᴠᴇʟʏ ʏᴏᴜ ᴄᴀɴ ʟɪɴᴋ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴛᴏ ᴛʜᴀᴛ ᴄʜᴀɴɴᴇʟ ᴀɴᴅ ᴛʜᴇɴ ᴛʀʏ ᴄᴏɴɴɴᴇᴄᴛɪɴɢ ᴡɪᴛʜ <code>/channelplay linked</code>"
 cplay_7 : "» ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴅɪsᴀʙʟᴇᴅ."
 
-play_1 : "🥀 𝐏ɤσƈɛssɩŋʛ... 🦋"
+play_1 : "⚡"
 play_2 : "<b>➻ ᴄʜᴀɴɴᴇʟ ᴘʟᴀʏ ᴍᴏᴅᴇ</b>\n\nᴘʀᴏᴄᴇssɪɴɢ, ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\n<b>ʟɪɴᴋᴇᴅ ᴄʜᴀɴɴᴇʟ :</b> {0}"
 play_3 : "» ғᴀɪʟᴇᴅ ᴛᴏ ᴘʀᴏᴄᴇss ǫᴜᴇʀʏ."
 play_4 : "<b>ᴀᴅᴍɪɴs ᴏɴʟʏ ᴘʟᴀʏ</b>\nᴏɴʟʏ ᴀᴅᴍɪɴs ᴏғ ᴛʜɪs ᴄʜᴀᴛ ᴀʀᴇ ᴀʟʟᴏᴡᴇᴅ ᴛᴏ ᴘʟᴀʏ\n\nᴄʜᴀɴɢᴇ ᴘʟᴀʏ ᴍᴏᴅᴇ ᴠɪᴀ /playmode"
@@ -174,22 +174,22 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "➲ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n\n<b>‣ Tɪᴛʟᴇ :</b> <a href={0}>{1}</a>\n<b>‣ Dᴜʀᴀᴛɪᴏɴ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>‣ Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}"
-stream_2 : "➲ <b>Sᴛᴀʀᴛᴇᴅ Sᴛʀᴇᴀᴍɪɴɢ |</b>\n\n<b>‣ Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>‣ Rᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}/n powerd By : @ᴍᴀʀɪʏᴀɴ"
+stream_1 : "➲ <b>𝛿𖾓៱૨𖾓𖽞𖽴ꪲꪳ 𝗦𖾓𖾜𖽞៱𖾕ɭ𖾚ɢ𝀚💋 |</b>\n\n<b>❤️‍🩹 𝐓𖽹𖾓𖾓𖾘𖾔𝀚⚡ :</b> <a href={0}>{1}</a>\n<b>❤️‍🩹 𝐃𖽪𖽸𖽖𖾓𖽹𖽙𐊪𝀚⚡ :</b> {2} ᴍɪɴᴜᴛᴇs\n<b>❤️‍🩹 𝐌𖽪𖾗𖽹𖽝 𝐁ᵧ𝀚⚡ :</b> {3}"
+stream_2 : "➲ <b>𝛿𖾓៱૨𖾓𖽞𖽴ꪲꪳ 𝗦𖾓𖾜𖽞៱𖾕ɭ𖾚ɢ𝀚💋 |</b>\n\n<b>‣ Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>‣ ❤️‍🩹 𝐌𖽪𖾗𖽹𖽝 𝐁ᵧ𝀚⚡ :</b> {0}/n ❤️‍🩹 𝐏𖽙𖽮𖽞𖽸𖽴 𝐁ᵧ𝀚⚡ : @ᴍᴀʀɪʏᴀɴ"
 
 
-CLOSE_BUTTON  : "🗑ᴄʟᴏsᴇ🗑"
-BACK_BUTTON : "🔙ʙᴀᴄᴋ🔙"
+CLOSE_BUTTON  : "💛𝐂𖾘𖽙𖾗𖽞⚡"
+BACK_BUTTON : "❤️‍🩹𝐁𖽖𖽽𝛋🙈"
 
-S_B_1 : "sᴜᴍᴍᴏɴ ᴍᴇ"
-S_B_2 : "sᴜᴘᴘᴏʀᴛ"
-S_B_3 : "sᴜᴍᴍᴏɴ ᴍᴇ "
-S_B_4 : "ᴄᴏᴍᴍᴀɴᴅs"
-S_B_5 : "ᴅᴇᴠ"
-S_B_6 : "ᴄʜᴀɴɴᴇʟ"
+S_B_1 : "⚡ 𝐀ᴅᴅ 𝐌𖾔 𝐓𖽙 𝐘ᴏ𝞄૨ 𝐆𖽸𖽙𖽪𐌛 🌟"
+S_B_2 : "⚡𝐒𖽪𖽳𖽳𖽙𖽸𖾓👑"
+S_B_3 : "⚡ 𝐀ᴅᴅ 𝐌𖾔 𝐓𖽙 𝐘ᴏ𝞄૨ 𝐁𖽖𐌱ᵧ 🌟"
+S_B_4 : "❤️‍🩹𝐂𖽙𖾕𖾕𖽖𖽨𖽴𖾗🗽"
+S_B_5 : "💋 𝚶𖽮𖽡𖽞𖽸🌟"
+S_B_6 : "⚡𝛅𖽪𖽳𖽳𐌏𖽸𖾓💋"
 S_B_7 : "ʀᴇᴘᴏ"
 S_B_8 : "ʏᴏᴜᴛᴜʙᴇ"
-S_B_9 : "sᴜᴘᴘᴏʀᴛ"
+S_B_9 : "⚡𝐒𖽪𖽳𖽳𖽙𖽸𖾓💛"
 
 H_B_1 : "ᴀᴅᴍɪɴ"
 H_B_2 : "ᴀᴜᴛʜ"
