--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -191,30 +191,30 @@ S_B_7 : "ʀᴇᴘᴏ"
 S_B_8 : "ʏᴏᴜᴛᴜʙᴇ"
 S_B_9 : "⚡𝐒𖽪𖽳𖽳𖽙𖽸𖾓💛"
 
-H_B_1 : "ᴀᴅᴍɪɴ"
-H_B_2 : "ᴀᴜᴛʜ"
-H_B_3 : "ɢ-ᴄᴀsᴛ"
-H_B_4 : "ʙʟ-ᴄʜᴀᴛ"
-H_B_5 : "ʙʟ-ᴜsᴇʀ"
-H_B_6 : "ᴄ-ᴘʟᴀʏ"
-H_B_7 : "ɢ-ʙᴀɴ"
-H_B_8 : "ʟᴏᴏᴘ"
-H_B_9 : "ʟᴏɢ"
-H_B_10 : "ᴘɪɴɢ"
-H_B_11 : "ᴘʟᴀʏ"
-H_B_12 : "sʜᴜғғʟᴇ"
-H_B_13 : "sᴇᴇᴋ"
-H_B_14 : "sᴏɴɢ"
-H_B_15 : "sᴘᴇᴇᴅ"
-H_B_16 : "ɢᴘᴛ"
-H_B_17 : "sᴛɪᴄᴋᴇʀ"
-H_B_18 : "ᴛᴀɢ-ᴀʟʟ"
-H_B_19 : "ɪɴғᴏ"
-H_B_20 : "ɢʀᴏᴜᴘ"
-H_B_21 : "ᴇxᴛʀᴀ"
-H_B_22 : "ɪᴍᴀɢᴇ"
-H_B_23 : "ᴀᴄᴛɪᴏɴ"
-H_B_24 : "sᴇᴀʀᴄʜ"
+H_B_1 : "💛𝐀𖽴𖾕𖽹𖽨🌟"
+H_B_2 : "💛𝐀𖽪𖾓𖽻🥵"
+H_B_3 : "💛𝐆𝀚𖽽𖽙𖾗𖾓😈"
+H_B_4 : "💛𝐁𝐥𝀚𖽽𖽻𖽖𖾓🐥"
+H_B_5 : "💛𝐁ʟ𝀚𖽪𖾗𖾔𖾜💋"
+H_B_6 : "💛𝐂𝀚𖽳𖾘𖽖𖽕⚡"
+H_B_7 : "💛𝐆𝀚𖽜𖽖𖽡🫀"
+H_B_8 : "💛𝐋𖽙𖽙𖽳🍋"
+H_B_9 : "💛𝐋𖽙𖽲❤️‍🩹"
+H_B_10 : "💛𝐏𖽹𖽡𖽼🐥"
+H_B_11 : "💛𝐏𖾘𖽖𖽗❤️"
+H_B_12 : "💛𝐒𖽻𖽪𖾖𖾖𖾘🐑"
+H_B_13 : "💛𝐒𖾔𖾔𝛋🐭"
+H_B_14 : "💛𝐒𖽙𖽡𖽲🐤"
+H_B_15 : "💛𝐒𖽳𖾔𖾔𖽴🐾"
+H_B_16 : "💛𝐆𖽳𖾓👻"
+H_B_17 : "💛𝐒𖾓𖽹𖽽𝛋𖾔𖾜🫵"
+H_B_18 : "💛𝐓𖽖𖽲𝀚𝐀𖾘𖾘🫣"
+H_B_19 : "💛𝐈𖽡𖾖𖽙💌"
+H_B_20 : "💛𝐆𖾜𖽙𖽪𖽳💔"
+H_B_21 : "💛𝐄𝘹𖾓𖾜𖽖💟"
+H_B_22 : "💛𝐈𖾕𖽖𖽲𖾔❤️‍🔥"
+H_B_23 : "💛𝐀𖽽𖾓𖽹𖽙𖽡💗"
+H_B_24 : "💛𝐒𖽞𖽖𖾜𖽽𖽻💫"
 
 P_B_1 : "ᴀᴜᴅɪᴏ"
 P_B_2 : "ᴠɪᴅᴇᴏ"
