--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -174,7 +174,7 @@ queue_6 : "<b>🕚 ᴅᴜʀᴀᴛɪᴏɴ :</b> ᴜɴᴋɴᴏᴡɴ ᴅᴜʀᴀᴛ
 queue_7 : "\nᴄʟɪᴄᴋ ᴏɴ ʙᴜᴛᴛᴏɴ ʙᴇʟᴏᴡ ᴛᴏ ɢᴇᴛ ᴡʜᴏʟᴇ ǫᴜᴇᴜᴇᴅ ʟɪsᴛ."
 queue_8 : "<b>{0} ᴘʟᴀʏᴇʀ</b>\n\n🎄 <b>sᴛʀᴇᴀᴍɪɴɢ :</b> {1}\n\n🔗 <b>sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> {2}\n🥀 <b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {3}\n{4}"
 
-stream_1 : "☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★ \n➲ <b>𝛿𖾓៱૨𖾓𖽞𖽴ꪲꪳ 𝗦𖾓𖾜𖽞៱𖾕ɭ𖾚ɢ𝀚💋 |</b>\n\n<b>❤️‍🩹 𝐓𖽹𖾓𖾓𖾘𖾔𝀚⚡ :</b> <a href={0}>{1}</a>\n\n<b>❤️‍🩹 𝐃𖽪𖽸𖽖𖾓𖽹𖽙𐊪𝀚⚡ :</b> {2} ᴍɪɴᴜᴛᴇs\n\n<b>❤️‍🩹 𝐌𖽪𖾗𖽹𖽝 𝐁ᵧ𝀚⚡ :</b> {3}\n ❤️‍🩹 𝐏𖽙𖽮𖽞𖽸𖽴 𝐁ᵧ𝀚⚡ : @ᴍᴀʀɪʏᴀɴ"
+stream_1 : "☆ . * ● ¸ . ✦ .★　° :. ★ * • ○ ° ★ \n➲ <b>𝛿𖾓៱૨𖾓𖽞𖽴ꪲꪳ 𝗦𖾓𖾜𖽞៱𖾕ɭ𖾚ɢ𝀚💋 |</b>\n\n<b>❤️‍🩹 𝐓𖽹𖾓𖾓𖾘𖾔👸 :</b> <a href={0}>{1}</a>\n\n<b>😻 𝐃𖽪𖽸𖽖𖾓𖽹𖽙𐊪👸 :</b> {2} ᴍɪɴᴜᴛᴇs\n\n<b>🌟 𝐌𖽪𖾗𖽹𖽝 𝐁ᵧ👸 :</b> {3}\n💌𝐏𖽙𖽮𖽞𖽸𖽴 𝐁ᵧ👸 : @ᴍᴀʀɪʏᴀɴ"
 stream_2 : "➲ <b>𝛿𖾓៱૨𖾓𖽞𖽴ꪲꪳ 𝗦𖾓𖾜𖽞៱𖾕ɭ𖾚ɢ𝀚💋 |</b>\n\n<b>‣ Sᴛʀᴇᴀᴍ ᴛʏᴘᴇ :</b> ʟɪᴠᴇ sᴛʀᴇᴀᴍ [ᴜʀʟ]\n<b>‣ ❤️‍🩹 𝐌𖽪𖾗𖽹𖽝 𝐁ᵧ𝀚⚡ :</b> {0}/n ❤️‍🩹 𝐏𖽙𖽮𖽞𖽸𖽴 𝐁ᵧ𝀚⚡ : @ᴍᴀʀɪʏᴀɴ"
 
 
